# azure-iot-rs-sys

./: .gitmodules  Cargo.toml  README.md  build.rs  wrapper.h
src/: iothub.rs  lib.rs
