[package]
name = "azure-iot-rs-sys"
description = "Rust bindings for Azure IOT C SDK"
version = "0.1.2"
authors = ["Prakash <duggaraju@gmail.com>"]
edition = "2018"
build = "build.rs"
repository = "https://github.com/duggaraju/azure_iot_rs"
license = "MIT"
keywords = [ "azure", "iot", "edge", "device" , "SDK" ]
categories = ["external-ffi-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log="0.4.11"
serde_json = "1.0.57"
config = "0.10.1"

[build-dependencies]
bindgen="0.54.0"
cmake = "0.1"
